--- a/src/article.html
+++ b/src/article.html
@@ -114,7 +114,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-fluid mt-5 mb-3" src="assets/images/article-details-large.jpg" alt="alternative">
+                    <img class="img-fluid mt-5 mb-3" src="assets/images/article-details-large.jpg">
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
